# ArchivedRepo

./: README.md
dataset/: CMakeLists.txt  Custom_tvm_Keras.py  Deployment.cpp  Test.py  Tutorial_tvm_Keras.py  Tutorial_tvm_Pytorch.py  Tutorial_xla_Keras.py  axpy.py  label_image.py  modified.bc  modified.ll  result.bc  result.ll  tf_event_trace.json  tvm_deployment_test  tvm_runtime_pack.cc
dataset/Caffe2/: Tutorial_Caffe2.py
dataset/Keras/: Basic_tvm_Keras.py  Custom_tvm_Keras.py  Tutorial_tvm_Keras.py
dataset/Keras/CustomModel/: custommodel  model.ll  model.s
dataset/Keras/basic_layer/: conv2d  conv2d.ll  dense  dense.ll  flatten  flatten.ll  maxpool2d  maxpool2d.ll  maxpool2d.s  relu  relu.ll  relu.s  softmax  softmax.ll
dataset/basic_layer/: bn.bc  bn.ll
dataset/inference/: custom_model_0.bc  custom_model_00.bc  custom_model_00.ll  custom_model_1.bc  custom_model_1.ll  dimension  extraction.py  old_dimension  res.txt  resnet50.bc  resnet50.ll  simple_model.bc  simple_model.ll
dataset/resnet/: lib.ll  lib_pytorch.ll
src/: .gitignore  Parser.py  Types.py  ail.py  ail_parser.py  ail_utils.py  analysis_process.ml  analysis_process.py  basic_layer.s  basic_layer_old.s  bss_creator.py  build.sh  cfg.py  cg.py  clonesearch.py  compile_process.py  config.py  disassemble_process.ml  disassemble_process.py  disassemble_validator.py  export_data.py  func_addr.py  func_slicer.ml  func_slicer.py  gobmk_sub.py  init.py  init_sec_adjust.py  inline_update.py  label_adjust.py  lex_new.py  main_discover.py  parse_init_array.py  pic_process.py  post_process.py  (+11 more)
(+61 files in other folders)
